<resources>
    <string name="app_name">Chop Chop</string>
    <string name="str_OK">Ok</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="signin">SIGN IN</string>
    <string name="email">Email</string>
    <string name="str_password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_EnterLocation">Enter Your Location</string>
    <string name="str_Search">SEARCH</string>
    <string name="str_Daily">Daily</string>
    <string name="str_leaving">Leaving Now</string>
    <string name="str_YourCurrentLocation">Your Current Location</string>
    <string name="str_YourDropOff">Where to?</string>
    <string name="str_AddHome">Add Home</string>
    <string name="str_AddWork">Add Work</string>
    <string name="str_ShowTrips">Show Trips Starting From</string>
    <string name="str_Time">Time</string>
    <string name="str_Now">Now</string>
    <string name="str_Date">Date</string>
    <string name="str_Today">Today</string>
    <string name="str_Proceed">Proceed</string>
    <string name="str_ETA">ETA: 5 Mins</string>
    <string name="str_View">View</string>
    <string name="str_seatNo">9</string>
    <string name="str_Seat">Seat</string>
    <string name="str_Vacancy">Vacancy</string>
    <string name="str_Price">Price</string>
    <string name="str_Book">Book</string>
    <string name="str_Route">Route</string>
    <string name="str_Destination">Destination</string>
    <string name="str_BusNumber">Bus Number</string>
    <string name="str_Bus">Bus</string>
    <string name="str_VacancyNumber">3</string>
    <string name="str_ETADes">ETA</string>
    <string name="str_ETANumber">5 Mins</string>
    <string name="str_Amount">$5.00</string>
    <string name="str_ViewBusLocation">View Bus Location</string>
    <string name="str_ViewBusDirection">Bus Strop Direction</string>
    <string name="str_2ndFeb">2nd Feb, 2022</string>
    <string name="str_APIKEY">AIzaSyAvCJARyieO_JjDsyIqA2dNbxbHxf8XV8g</string>
    <string name="str_WelcomeToChopChop">Welcome to Chop Chop</string>
    <string name="str_SingUptoContinue">Login or Sign Up to Continue</string>
    <string name="str_SingIntoContinue">Sign In to Continue</string>
    <string name="str_DonthaveAccount">Dont have an Account Yet?</string>
    <string name="str_signUpNow"><u>Sign Up Here</u></string>
    <string name="str_Login">LOGIN</string>
    <string name="str_Phone">Phone Number</string>
    <string name="str_FullName">Full Name</string>
    <string name="str_FirstName">First Name</string>
    <string name="str_LastName">Last Name</string>
    <string name="signUp">SIGN UP</string>
    <string name="str_getOTP">GET OTP</string>
    <string name="str_EnterOTP">4 Digits OTP</string>
    <string name="str_enterPhoneNumber">Please enter your phone number</string>
    <string name="str_enterFullName">Please enter your full name</string>
    <string name="str_enterFirstName">Please enter your first name</string>
    <string name="str_enterLastName">Please enter your last name</string>
    <string name="str_enterEmail">Please enter your email</string>
    <string name="str_enterOTP">Please enter the OTP</string>
    <string name="str_enterPhoneNumberToSignup">Please enter your phone number to continue signup.</string>
    <string name="str_enterPhoneNumberToLogin">Please enter your phone number to login.</string>
    <string name="str_provideFollowingInformation">Please provide the following information.</string>
    <string name="str_Email">Email</string>
    <string name="str_register">Register</string>
    <string name="backpress">backpress</string>
    <string name="str_enterRouteName">Route Name</string>
    <string name="str_enterBusName">Bus Name</string>
    <string name="str_enterCompanyName">Company Name</string>
    <string name="str_enterContactNumber">Contact Number</string>
    <string name="str_enterContactNumberValidation">Please enter the Contact Number</string>
    <string name="str_selectYourCompanyValidation">Please select your company</string>
    <string name="str_enterContactEmail">Email Address</string>
    <string name="str_enterContactEmailValidation">Please enter the Email Address</string>
    <string name="str_enterRouteInformation">Please provide the following information to add new Route</string>
    <string name="str_enterBusInformation">Please provide the following information to add new Bus</string>
    <string name="str_enterStopInformation">Please provide the following information to add new Stop</string>
    <string name="str_enterCost">Fare</string>
    <string name="str_enterColor">Color</string>
    <string name="str_enterBusType">Bus Type</string>
    <string name="str_enterRegistrationNumber">Registration Number</string>
    <string name="stops">Stops</string>
    <string name="str_addRoute">Add Route</string>
    <string name="str_selectStops">Select Stops</string>
    <string name="add_stops">Add Stops</string>
    <string name="str_done">Done</string>
    <string name="str_enterRouteNameValidation">Please enter the route name</string>
    <string name="str_enterBusNameValidation">Please enter the bus name</string>
    <string name="str_enterBusRegistrationNumberValidation">Please enter the bus registration number</string>
    <string name="str_enterBusTypeValidation">Please enter the bus type</string>
    <string name="str_enterBusColor">Please enter the bus color</string>
    <string name="str_enterStopNameValidation">Please enter the stop name</string>
    <string name="str_enterCompanyNameValidation">Please enter the company name</string>
    <string name="str_enterFareValidation">Please enter the Fare</string>
    <string name="str_enterLocation">Please enter the stop location</string>
    <string name="str_selectStopsValidation">Please select the stops for this route.</string>
    <string name="str_selectStopsAccordingToArrival">Select the stops according to their arrival order. It cannot be changed later</string>
    <string name="strSearch">Search</string>
    <string name="str_Routes">Routes</string>
    <string name="str_enterStopName">Stop Name</string>
    <string name="str_enterStopLocation">Enter Stop Location</string>
    <string name="str_selectCompany">Select Your company</string>
    <string name="str_addStop">Add Stop</string>
    <string name="str_stopLocationNotFound">We couldn\'t get the stop location. Please try again</string>
    <string name="welcome">Welcome</string>
    <string name="admin">Admin</string>
    <string name="what_s_up_for_today">What\'s Up For Today!</string>
    <string name="strBookings">Bookings</string>
    <string name="str_Drivers">Drivers</string>
    <string name="str_Passengers">Passengers</string>
    <string name="str_Companies">Companies</string>
    <string name="str_Dashboard">Dashboard</string>
    <string name="str_assignedRoutes">Assigned Routes</string>
    <string name="str_driverRequests">Driver Requests</string>
    <string name="str_buses">Buses</string>
    <string name="str_allRoutes">All Routes</string>
    <string name="str_allStops">All Stops</string>
    <string name="str_RouteDetails">Route Details</string>
    <string name="assign_this_route">Assign this Route</string>
    <string name="str_allBuses">All Buses</string>
    <string name="str_allCompanies">All Companies</string>
    <string name="str_allDriverRequests">Driver Requests</string>
    <string name="str_addBus">Add New Bus</string>
    <string name="str_registrationNumber">Registration Number</string>
    <string name="str_busType">Bus Type</string>
    <string name="str_busColor">Color</string>
    <string name="str_BusDetails">Bus Details</string>
    <string name="str_delete">Delete</string>
    <string name="str_edit">Edit</string>
    <string name="str_approve">Approve</string>
    <string name="str_Reject">Reject</string>
    <string name="str_addCompany">Add New Company</string>
    <string name="str_companyDetails">Company Details</string>
    <string name="str_noResultFound">No Result Found</string>
    <string name="str_updateStop">Update Stop</string>
    <string name="str_updateRoute">Update Route</string>
    <string name="str_changeStops">Change Stops</string>
    <string name="str_updateBus">Update Bus</string>
    <string name="str_updateCompany">Update Company</string>
    <string name="str_allAssignedRoutes">All Assigned Routes</string>
    <string name="str_assignNewRoute">Assign New Route</string>
    <string name="str_selectRoute">Select Route</string>
    <string name="str_selectBus">Select Bus</string>
    <string name="str_departureTime">Departure Time</string>
    <string name="str_selectTime">Select Time</string>
    <string name="str_busInformation">Bus Information</string>
    <string name="str_Driver">Driver</string>
    <string name="str_assignDriver">Assign Driver</string>
    <string name="str_recently_added_routes">Recently Added Routes</string>
    <string name="str_searchRoute">Search Route</string>
    <string name="popular_routes">Popular Routes</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_yourTrips">Your Trips</string>
    <string name="payment">Payment</string>
    <string name="logout">Logout</string>
    <string name="assign_routes">Assign Routes</string>
    <string name="assign_routeDetails">Assign Route Details</string>
    <string name="str_driverDetails">Driver Details</string>
    <string name="pending">Pending</string>
    <string name="str_RideRequests">Ride Requests</string>
    <string name="str_viewRideDetails">View Ride Details</string>
    <string name="str_signIn">Sign In</string>
    <string name="str_signOut">Sign Out</string>
    <string name="pick_passengers">Pick Passengers</string>
    <string name="str_pick">Pick</string>
    <string name="str_miss">Not on Stop</string>
    <string name="pending_driver_approval">Pending Driver Approval</string>
    <string name="confirmedBookings">Confirmed Rides</string>
    <string name="activeBookings">Active Bookings</string>
    <string name="scanQRDes">Please get this QR code scanned from driver and enjoy the ride!</string>
    <string name="end_ride">End Ride</string>
    <string name="str_paymentMethods">Payment Methods</string>
    <string name="str_addCreditDebitCard">Add a credit or debit card</string>
    <string name="str_addPaymentInformation">Add Your Payment Information</string>
    <string name="card_information">Card Information</string>
    <string name="str_cardHolderName">Card Holder Name</string>
    <string name="str_cardNumber">Card Number</string>
    <string name="str_addCard">Add Card</string>
    <string name="str_cardHolderNameRequired">Cardholder name is required!</string>
    <string name="str_cardNumberRequired">Invalid card number!</string>
    <string name="str_expiryDateRequired">Invalid expiry date!</string>
    <string name="str_CVCRequired">Invalid card CVC!</string>
    <string name="delete_PaymentMethod">Delete this card</string>
    <string name="choose_paymentMethod">Choose your Payment Method</string>
    <string name="str_card">Card</string>
    <string name="alipay">Alipay</string>
    <string name="str_proceedToPay">Proceed to Pay</string>
    <string name="str_enterVacancy">Vacancy</string>
    <string name="str_enterVacancyValidation">Please enter the number of seats in this bus</string>
    <string name="str_pickLocation">Pick this Location</string>
    <string name="str_availableRoutes">Available Routes</string>
    <string name="assigned_bus">Assigned Bus</string>
    <string name="str_notAssignedToAnyBus">Not assigned to any bus!</string>
    <string name="str_notAssignedToAnyDriver">Not assigned to any driver</string>
    <string name="str_assignedTo">Assigned To</string>
    <string name="rides_history">Rides History</string>
</resources>